--- a/TokenService/TokenService/bin/TokenService.dll.config
+++ b/TokenService/TokenService/bin/TokenService.dll.config
@@ -28,7 +28,7 @@
         <host>
           <baseAddresses>
             <!--<add baseAddress="http://localhost:8733/Design_Time_Addresses/TokenService/WcfService/Token" />-->
-            <add baseAddress="http://localhost:62433/WcfService/TokenService.svc"/>
+            <add baseAddress="http://localhost:62433/WcfService/TokenService.svc" />
           </baseAddresses>
         </host>
         <!-- Service Endpoints -->
@@ -88,8 +88,8 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
     </providers>
   </entityFramework>
   <runtime>
@@ -97,6 +97,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
