--- a/RestaurantService/RestaurantService/bin/RestaurantService.dll.config
+++ b/RestaurantService/RestaurantService/bin/RestaurantService.dll.config
@@ -22,7 +22,8 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="RestaurantContext" connectionString="Server=127.0.0.1;Port=5432;Database=restaurants;User Id=postgres;Password=postgres;" providerName="Npgsql" />
+    <add name="RestaurantContext" connectionString="Server=127.0.0.1;Port=5433;Database=restaurants;User Id=postgres;Password=postgres;" providerName="Npgsql" />
+    <add name="RateContext" connectionString="Server=127.0.0.1;Port=5433;Database=restaurants;User Id=postgres;Password=postgres;" providerName="Npgsql" />
   </connectionStrings>
   
   <system.web>
@@ -33,18 +34,18 @@
     </httpModules>
   </system.web>
   <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
+    
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -90,6 +91,9 @@
       <context type="RestaurantService.DAL.RestaurantContext, RestaurantService">
         <databaseInitializer type="RestaurantService.DAL.RestaurantInitializer, RestaurantService" />
       </context>
+    <context type="RestaurantService.DAL.RateContext, RestaurantService">
+        <databaseInitializer type="RestaurantService.DAL.RateInitializer, RestaurantService" />
+      </context>
     </contexts>
 
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -115,9 +119,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:62433/WcfService/TokenService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITokenService"
-        contract="TokenService.ITokenService" name="BasicHttpBinding_ITokenService" />
+      <endpoint address="http://localhost:62433/WcfService/TokenService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITokenService" contract="TokenService.ITokenService" name="BasicHttpBinding_ITokenService" />
     </client>
   </system.serviceModel>
 </configuration>
