created RateRestaurant and revert config changes

--- a/RestaurantService/RestaurantService/Web.config
+++ b/RestaurantService/RestaurantService/Web.config
@@ -22,7 +22,7 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="RestaurantContext" connectionString="Server=127.0.0.1;Port=5433;Database=restaurants;User Id=postgres;Password=postgres;" providerName="Npgsql" />
+    <add name="RestaurantContext" connectionString="Server=127.0.0.1;Port=5432;Database=restaurants;User Id=postgres;Password=postgres;" providerName="Npgsql" />
   </connectionStrings>
   
   <system.web>
@@ -115,7 +115,9 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:62433/WcfService/TokenService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITokenService" contract="TokenService.ITokenService" name="BasicHttpBinding_ITokenService" />
+      <endpoint address="http://localhost:62433/WcfService/TokenService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITokenService"
+        contract="TokenService.ITokenService" name="BasicHttpBinding_ITokenService" />
     </client>
   </system.serviceModel>
 </configuration>
