--- a/RestaurantService/RestaurantService/bin/RestaurantService.dll.config
+++ b/RestaurantService/RestaurantService/bin/RestaurantService.dll.config
@@ -115,7 +115,9 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:62433/WcfService/TokenService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITokenService" contract="TokenService.ITokenService" name="BasicHttpBinding_ITokenService" />
+      <endpoint address="http://localhost:62433/WcfService/TokenService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITokenService"
+        contract="TokenService.ITokenService" name="BasicHttpBinding_ITokenService" />
     </client>
   </system.serviceModel>
 </configuration>
